updated html with links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
   <body>
     <h1>Welcome to the AI French poem generator</h1>
+    <footer>
+      This AI project is built by<a
+        href="https://github.com/coffeelover12396"
+        target="_blank"
+      >
+        Filipa Musinov</a
+      >
+      and it is
+      <a
+        href="https://github.com/coffeelover12396/ProjectAI-FM"
+        target="_blank"
+      >
+        open-sourced on Github</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
