--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       >
         open-sourced on Github</a
       >
+
+      and is hosted on
+      <a href="https://project-ai-fm.netlify.app/" target="_blank"> Netlify</a>
     </footer>
     <script src="src/index.js"></script>
   </body>
