--- a/index.html
+++ b/index.html
@@ -7,40 +7,45 @@
     <title>AI French Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI French poem generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of the French poem"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>The poem will go here</div>
-    </main>
-    <footer>
-      This AI project is built by<a
-        href="https://github.com/coffeelover12396"
-        target="_blank"
-      >
-        Filipa Musinov</a
-      >
-      and it is
-      <a
-        href="https://github.com/coffeelover12396/ProjectAI-FM"
-        target="_blank"
-      >
-        open-sourced on Github</a
-      >
+    <div class="container">
+      <header>
+        <h1>AI French poem generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of the French poem"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">The poem will go here</div>
+      </main>
+      <footer>
+        This AI project is built by<a
+          href="https://github.com/coffeelover12396"
+          target="_blank"
+        >
+          Filipa Musinov</a
+        >
+        and it is
+        <a
+          href="https://github.com/coffeelover12396/ProjectAI-FM"
+          target="_blank"
+        >
+          open-sourced on Github</a
+        >
 
-      and is hosted on
-      <a href="https://project-ai-fm.netlify.app/" target="_blank"> Netlify</a>
-    </footer>
+        and is hosted on
+        <a href="https://project-ai-fm.netlify.app/" target="_blank">
+          Netlify</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
