--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>AI French Poem Generator</title>
+    <title>AI English Poem Generator</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>AI French poem generator</h1>
+        <h1>AI English poem generator</h1>
       </header>
       <main>
         <div class="form-container">
           <form id="poem-generator-form">
             <input
               type="text"
-              placeholder="Enter the topic of the French poem"
+              placeholder="Enter the topic of the English poem"
               autofocus
               required
               autocomplete="off"
@@ -27,7 +27,7 @@
             />
             <input type="submit" class="submit-button" />
           </form>
-          <div class="hint">i.e.: Flower, Paris or Cheese</div>
+          <div class="hint">i.e.: Flower, London or Cat</div>
         </div>
         <div class="poem hidden" id="poem"></div>
       </main>
